; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_tx_template.c_gen_mdct_exptab.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_tx_template.c_gen_mdct_exptab.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { double, double }

@ENOMEM = common dso_local global i32 0, align 4
@M_PI_2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i32, double)* @gen_mdct_exptab to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gen_mdct_exptab(%struct.TYPE_4__* %0, i32 %1, double %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca double, align 8
  %8 = alloca double, align 8
  %9 = alloca i32, align 4
  %10 = alloca double, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i32 %1, i32* %6, align 4
  store double %2, double* %7, align 8
  %11 = load double, double* %7, align 8
  %12 = fcmp olt double %11, 0.000000e+00
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = load i32, i32* %6, align 4
  br label %16

15:                                               ; preds = %3
  br label %16

16:                                               ; preds = %15, %13
  %17 = phi i32 [ %14, %13 ], [ 0, %15 ]
  %18 = sitofp i32 %17 to double
  %19 = fadd double %18, 1.250000e-01
  store double %19, double* %8, align 8
  %20 = load i32, i32* %6, align 4
  %21 = call %struct.TYPE_5__* @av_malloc_array(i32 %20, i32 16)
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  store %struct.TYPE_5__* %21, %struct.TYPE_5__** %23, align 8
  %24 = icmp ne %struct.TYPE_5__* %21, null
  br i1 %24, label %28, label %25

25:                                               ; preds = %16
  %26 = load i32, i32* @ENOMEM, align 4
  %27 = call i32 @AVERROR(i32 %26)
  store i32 %27, i32* %4, align 4
  br label %73

28:                                               ; preds = %16
  %29 = load double, double* %7, align 8
  %30 = call i32 @fabs(double %29)
  %31 = call double @sqrt(i32 %30)
  store double %31, double* %7, align 8
  store i32 0, i32* %9, align 4
  br label %32

32:                                               ; preds = %69, %28
  %33 = load i32, i32* %9, align 4
  %34 = load i32, i32* %6, align 4
  %35 = icmp slt i32 %33, %34
  br i1 %35, label %36, label %72

36:                                               ; preds = %32
  %37 = load i32, i32* @M_PI_2, align 4
  %38 = sitofp i32 %37 to double
  %39 = load i32, i32* %9, align 4
  %40 = sitofp i32 %39 to double
  %41 = load double, double* %8, align 8
  %42 = fadd double %40, %41
  %43 = fmul double %38, %42
  %44 = load i32, i32* %6, align 4
  %45 = sitofp i32 %44 to double
  %46 = fdiv double %43, %45
  store double %46, double* %10, align 8
  %47 = load double, double* %10, align 8
  %48 = call double @cos(double %47) #3
  %49 = load double, double* %7, align 8
  %50 = fmul double %48, %49
  %51 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %52 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %51, i32 0, i32 0
  %53 = load %struct.TYPE_5__*, %struct.TYPE_5__** %52, align 8
  %54 = load i32, i32* %9, align 4
  %55 = sext i32 %54 to i64
  %56 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %53, i64 %55
  %57 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %56, i32 0, i32 0
  store double %50, double* %57, align 8
  %58 = load double, double* %10, align 8
  %59 = call double @sin(double %58) #3
  %60 = load double, double* %7, align 8
  %61 = fmul double %59, %60
  %62 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %63 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %62, i32 0, i32 0
  %64 = load %struct.TYPE_5__*, %struct.TYPE_5__** %63, align 8
  %65 = load i32, i32* %9, align 4
  %66 = sext i32 %65 to i64
  %67 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %64, i64 %66
  %68 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %67, i32 0, i32 1
  store double %61, double* %68, align 8
  br label %69

69:                                               ; preds = %36
  %70 = load i32, i32* %9, align 4
  %71 = add nsw i32 %70, 1
  store i32 %71, i32* %9, align 4
  br label %32

72:                                               ; preds = %32
  store i32 0, i32* %4, align 4
  br label %73

73:                                               ; preds = %72, %25
  %74 = load i32, i32* %4, align 4
  ret i32 %74
}

declare dso_local %struct.TYPE_5__* @av_malloc_array(i32, i32) #1

declare dso_local i32 @AVERROR(i32) #1

declare dso_local double @sqrt(i32) #1

declare dso_local i32 @fabs(double) #1

; Function Attrs: nounwind
declare dso_local double @cos(double) #2

; Function Attrs: nounwind
declare dso_local double @sin(double) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
